# gemini-scribe

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy_main.yaml  execute_main_tests.yaml
gemini_scribe/: main.py  settings.py
gemini_scribe/endpoints/: extraction.py  health.py
gemini_scribe/models/: __init__.py  enums.py  response_models.py
gemini_scribe/services/: batching.py  cloud_storage.py  image_to_markdown.py  pdf_to_image.py  text_extraction.py
gemini_scribe/templates/: extract_text_from_image.txt
tests/: conftest.py  test_batching.py  test_cloud_storage.py  test_image_to_markdown.py  test_pdf_to_image.py  test_text_extraction.py
